--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#5f9f9f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#efefef</color>
+    <color name="blue">@android:color/holo_blue_light</color>
 </resources>
